--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
     link(rel="shortcut icon", href="../img/v.ico")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
-    title #{title} | MV
+    title #{title}
     link(rel="stylesheet" href="/css/home.css")
     
     //- icon fonts
