--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,43 +45,6 @@
 </div>
 </div>
 
-<!-- <nav class="navbar navbar-expand-lg navbar-blue bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-    <form method="get" action="/views/login.ejs">
-      <a href="" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal"
-        data-target="#modalRegisterForm">login</a>
-    </form>
-  </div>
-</nav> -->
-
 <body class="bg-color">
   <nav class="navbar navbar-color nav-height
      justify-content-between">
@@ -100,7 +63,8 @@
   </nav>
   <div class="row">
     <div class="col-sm m-auto">
-      <h2 class="text-justify display-4">Es un sitio web que busca conectar a los lomitos mas desafortunados que se encuentran en las perreras mas cercanas a ti, 
+      <h2 class="text-justify display-4">Es un sitio web que busca conectar a los lomitos mas desafortunados que se
+        encuentran en las perreras mas cercanas a ti,
         para brindarles un nuevo hogar y una vida llena de amor.</h2>
     </div>
     <div class="row d-flex align-items-end justify-content-end p-5 col-sm">
@@ -143,12 +107,12 @@
                         <!-- Form -->
                         <form class="text-center" style="color: #757575;" action="#!">
 
-                              <!-- First name -->
-                              <div class="md-form">
-                                <input type="text" id="materialRegisterFormFirstName" class="form-control">
-                                <label for="materialRegisterFormFirstName">Nombre</label>
-                              </div>
-                           
+                          <!-- First name -->
+                          <div class="md-form">
+                            <input type="text" id="materialRegisterFormFirstName" class="form-control">
+                            <label for="materialRegisterFormFirstName">Nombre</label>
+                          </div>
+
 
                           <!-- E-mail -->
                           <div class="md-form mt-0">
@@ -268,7 +232,7 @@
 
                           <!-- Sign up button -->
                           <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0"
-                            type="submit">Sign in</button>
+                            onclick='window.location.href = "/mygallery"'>Sign in</button>
 
                           <!-- Social register -->
                           <p>or sign up with:</p>
