correxion de botones

--- a/views/lomitosGallery.html
+++ b/views/lomitosGallery.html
@@ -27,7 +27,7 @@
             <a href="#"> <i class="fas fa-home iconNav-size iconNav-color ml-3" title="Perritos que me gustan"></i></a>
         </div>
         <form class="form-inline">
-            <button class="btn btn-lg btn-outline-primary btnNav my-2 my-sm-0" type="submit">Log Out</button>
+            <a class="btn btn-lg btn-outline-primary btnNav my-2 my-sm-0" href="/">Log Out</a>
         </form>
 
     </nav>
