--- a/views/home.ejs
+++ b/views/home.ejs
@@ -140,22 +140,11 @@
                             </small>
                           </div>
 
-                          <!-- Newsletter -->
-                          <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="materialRegisterFormNewsletter">
-                            <label class="form-check-label" for="materialRegisterFormNewsletter">Subscribe to our
-                              newsletter</label>
-                          </div>
-
                           <!-- Sign up button -->
-                          <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0"
-                            onclick='window.location.href = "/gallery"'>Sign in</button>
+                          <a class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0"
+                          href="/gallery">Sign in</a>
                           <hr>
 
-                          <!-- Terms of service -->
-                          <p>By clicking
-                            <em>Sign up</em> you agree to our
-                            <a href="" target="_blank">terms of service</a>
                         </form>
                         <!-- Form -->
                       </div>
@@ -223,25 +212,10 @@
                             </small>
                           </div>
 
-                          <!-- Newsletter -->
-                          <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="materialRegisterFormNewsletter">
-                            <label class="form-check-label" for="materialRegisterFormNewsletter">Subscribe to our
-                              newsletter</label>
-                          </div>
-
                           <!-- Sign up button -->
-                          <button class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0"
-                            onclick='window.location.href = "/mygallery"'>Sign in</button>
+                          <a class="btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0"
+                          href="/mygallery">Sign in</a>
 
-                          <!-- Social register -->
-                          <p>or sign up with:</p>
-                          <hr>
-
-                          <!-- Terms of service -->
-                          <p>By clicking
-                            <em>Sign up</em> you agree to our
-                            <a href="" target="_blank">terms of service</a>
                         </form>
                         <!-- Form -->
                       </div>
