--- a/views/myGalleryLomitos.html
+++ b/views/myGalleryLomitos.html
@@ -26,7 +26,7 @@
                     title="Donaciones a mi dog´s home"></i></a>
         </div>
         <form class="form-inline">
-            <button class="btn btn-lg btn-outline-primary btnNav my-2 my-sm-0" onclick="window.location.href='/'">Log Out</button>
+            <a class="btn btn-lg btn-outline-primary btnNav my-2 my-sm-0" href="/">Log Out</a>
         </form>
 
     </nav>
