dogH galery casi listo

--- a/views/galleryDogsHouse.html
+++ b/views/galleryDogsHouse.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../public/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="../public/css/sign.css">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="css/sign.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -17,7 +17,7 @@
 <body class="bg-color">
     <nav class="navbar navbar-color nav-height
      justify-content-between">
-        <a><img class="navbar-icon " src="../public/img/logo.svg"></a>
+        <a><img class="navbar-icon " src="img/logo.svg"></a>
         <h1 class="display-4 text-light ml-3">Salva lomitos</h1>
         <div class="ml-auto mr-2rem">
             <a href="#"> <i class="fas fa-dog iconNav-size iconNav-color  ml-3"
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <img alt="picture" src="../public/img/dogshome/doghome4.jpg" class="img-fluid">
+                    <img alt="picture" src="img/dogshome/doghome4.jpg" class="img-fluid">
                     <div id=" row">
                         <div>
                             <a class="font-weight-bold col-sm">Nombre: </a> <input id="nombreLomito" class="col-sm">
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <img alt="picture" src="../public/img//dogshome/doghome4.jpg" class="img-fluid">
+                    <img alt="picture" src="img//dogshome/doghome4.jpg" class="img-fluid">
                     <div id="">
                         <div>
                             <a class="font-weight-bold">Nombre: <a id="nombreLomito"></a></a>
@@ -202,7 +202,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <img alt="picture" src="../public/img/lomitos/lomito1.jpg" class="img-fluid">
+                    <img alt="picture" src="img/lomitos/lomito1.jpg" class="img-fluid">
                     <div class="">
                         <div>
                             <a class="font-weight-bold col-sm">Nombre: </a> <input id="nombreLomito" class="col-sm">
