--- a/public/css/sign.css
+++ b/public/css/sign.css
@@ -4,6 +4,9 @@
 .iconNav-size{
     font-size: 2.5rem;
 }
+.small-size{
+    font-size: 2rem;
+}
 .bg-color{
     background-color: rgb(253, 227, 190);
 }
