--- a/views/galleryDogsHouse.html
+++ b/views/galleryDogsHouse.html
@@ -26,7 +26,7 @@
                     title="Donaciones a mi dog´s home"></i></a>
         </div>
         <form class="form-inline">
-            <button href="" class="btn btn-lg btn-outline-primary btnNav my-2 my-sm-0" type="submit">Log Out</button>
+            <a href="/" class="btn btn-lg btn-outline-primary btnNav my-2 my-sm-0" type="submit">Log Out</a>
         </form>
 
     </nav>
@@ -38,7 +38,7 @@
                 <div class="col-md-12 d-flex ">
 
                     <figure class="col-md-4">
-                        <a href="#" onclick=verDogshome()" data-size="1600x1067">
+                        <a href="#" onclick="verDogshome()" data-size="1600x1067">
                             <img alt="picture" src="img/dogshome/doghome1.jpg" class="img-fluid img-lomito ">
                         </a>
                     </figure>
@@ -97,57 +97,6 @@
                 </li>
             </ul>
         </nav>
-        <form class="form-inline d-flex justify-content-center mt-4">
-            <button class="btn btn-outline-info px-md-5 m-3 d-block " type="submit" onclick="añadirDogshome()">
-                <a class="btntxtNewLomito">
-                    Nueva dog´s home
-                </a><br>
-                <a class="btntxtNewLomito"><i class="fas fa-plus-circle"></i></a>
-                <a class="display-4"><i class="fas fa-home"></i></a>
-            </button>
-        </form>
-    </div>
-    <!-- Modal para añadir dogshome-->
-    <div class="modal fade" id="newdogshomeForm" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 id="lomitoName" class="modal-title">Centro municipal de acogida de animales abandonados</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <div class="modal-body">
-                    <img alt="picture" src="img/dogshome/doghome4.jpg" class="img-fluid">
-                    <div id=" row">
-                        <div>
-                            <a class="font-weight-bold col-sm">Nombre: </a> <input id="nombreLomito" class="col-sm">
-                        </div>
-                        <div>
-                            <a class="font-weight-bold col-sm">Dirección: </a><input id="edadLomito" class="col-sm">
-                        </div>
-                        <div>
-                            <a class="font-weight-bold col-sm">Telefono:</a> <input id="estaturaLomito" class="col-sm">
-                        </div>
-                        <div>
-                            <a class="font-weight-bold col-sm">E-mail: </a><input id="pesoLomito" class="col-sm">
-                        </div>
-                        <div>
-                            <a class="font-weight-bold col-sm">Cuenta bancaria: </a><input id="VacunaLomito" class="col-sm">
-                        </div>
-                        <div class="modal-footer row">
-                            <button class="btn btn-outline-info px-md-5 m-3 d-block col-sm" type="submit" onclick="">
-                                <a class="btntxtNewLomito">
-                                    Guardar dog´s home
-                                </a><br>
-                            </button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
     </div>
 
     <!-- Modal para ver dogshome -->
@@ -239,6 +188,6 @@
     </div>
 
 </body>
-<script src="../utilities/lomitos.js"></script>
+<script src="src/lomitos.js"></script>
 
 </html>
